# anthropic-on-aws

./: .gitattributes  .gitignore  .gitmodules  .mergify.yml  .npmignore  .projenrc.js  404.html  LICENSE  README.md  build_docs.sh  copy_subproject_images.py  index.html  mkdocs.yml  package-lock.json  package.json  workflows.ts
.github/: dependabot.yml
.projen/: deps.json  files.json  tasks.json
advanced-claude-code-patterns/: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
agent-sdk-agentcore-memory/: README.md  agent.py  delete_memory.py  requirements.txt  setup_memory.py
cdk-applications/: README.md
classification-with-intercom/: .eslintrc.json  .gitattributes  .gitignore  .npmignore  LICENSE  README.md  cdk.json  package.json  tsconfig.dev.json  tsconfig.json  update-intercom-secret.sh
claude-agent-sdk-dynamic-skills-on-agentcore/: .bedrock_agentcore.yaml  .bedrock_agentcore.yaml.template  .dockerignore  .gitignore  LICENSE  README.md  claude_sdk_bedrock.py  requirements.txt  s3-skills-policy.json
claude-agent-sdk-on-agentcore/: README.md
claude-apps-gateway/: .gitignore  (+3 more)
claude-code-on-agentcore/headless-mode/: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  deploy.sh  deploy_claude_code.py  download_outputs.sh  infrastructure.yaml  invoke_claude_code.sh  memory_manager.py  pyproject.toml  run_streamlit.sh  setup_memory.py  show_agent_info.sh  streamlit_app.py  view_conversation_history.sh  view_memories.sh
claude-code-on-agentcore/headless-mode/iam/: permissions-policy.json  setup-iam-role.sh  trust-policy.json
(+953 files in other folders)
