[project]
name = "claude-code-agent"
version = "1.0.0"
description = "Claude Code (Cline) Agent for Amazon Bedrock AgentCore"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "boto3>=1.28.0",
    "python-json-logger>=2.0.7",
    "claude-agent-sdk",
    "bedrock-agentcore>=0.1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
